--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,21 +4,203 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
+  @apply no-underline;
 }
 
 * {
-  box-sizing: border-box;
+  @apply p-0 m-0 box-border;
 }
+
 @font-face {
   font-family: "burtons";
   src: url("../public/Burtons.otf");
 }
+
+.app__controller {
+   /* @apply min-h-screen w-full dark:bg-gray-900 absolute z-[2]; */
+   @apply min-h-screen w-full dark:bg-gray-900 absolute;
+}
+
+.app__loading-container .app__loading-part {
+  /* @apply fixed w-[5%] h-screen bg-gray-900; */
+  @apply fixed w-[5%] h-screen bg-white z-50;
+}
+
+.app__loading-overlay {
+  @apply w-full h-screen;
+}
+
+.app__loading-part.part-1 {
+  @apply left-0;
+}
+
+.app__loading-part.part-2 {
+  @apply left-[5%];
+}
+
+.app__loading-part.part-3 {
+  @apply left-[10%];
+}
+
+.app__loading-part.part-4 {
+  @apply left-[15%];
+}
+
+.app__loading-part.part-5 {
+  @apply left-[20%];
+}
+
+.app__loading-part.part-6 {
+  @apply left-[25%];
+}
+
+.app__loading-part.part-7 {
+  @apply left-[30%];
+}
+
+.app__loading-part.part-8 {
+  @apply left-[35%];
+}
+
+.app__loading-part.part-9 {
+  @apply left-[40%];
+}
+
+.app__loading-part.part-10 {
+  @apply left-[45%];
+}
+
+.app__loading-part.part-11 {
+  @apply left-[50%];
+}
+
+.app__loading-part.part-12 {
+  @apply left-[55%];
+}
+
+.app__loading-part.part-13 {
+  @apply left-[60%];
+}
+
+.app__loading-part.part-14 {
+  @apply left-[65%];
+}
+
+.app__loading-part.part-15 {
+  @apply left-[70%];
+}
+
+.app__loading-part.part-16 {
+  @apply left-[75%];
+}
+
+.app__loading-part.part-17 {
+  @apply left-[80%];
+}
+
+.app__loading-part.part-18 {
+  @apply left-[85%];
+}
+
+.app__loading-part.part-19 {
+  @apply left-[90%];
+}
+
+.app__loading-part.part-20 {
+  @apply left-[95%];
+}
+
+/* Locomotive scroll requirements */
+
+html.has-scroll-smooth {
+  overflow: hidden;
+}
+
+html.has-scroll-dragging {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.has-scroll-smooth body {
+  overflow: hidden;
+}
+
+.has-scroll-smooth [data-scroll-container] {
+  min-height: 100vh;
+}
+
+[data-scroll-direction="horizontal"] [data-scroll-container] {
+  height: 100vh;
+  display: inline-block;
+  white-space: nowrap;
+}
+
+[data-scroll-direction="horizontal"] [data-scroll-section] {
+  display: inline-block;
+  vertical-align: top;
+  white-space: nowrap;
+  height: 100%;
+}
+
+.c-scrollbar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 11px;
+  height: 100%;
+  transform-origin: center right;
+  transition: transform 0.3s, opacity 0.3s;
+  opacity: 0;
+}
+
+  .c-scrollbar:hover {
+    transform: scaleX(1.45);
+}
+
+  .c-scrollbar:hover, .has-scroll-scrolling .c-scrollbar, .has-scroll-dragging .c-scrollbar {
+    opacity: 1;
+}
+
+[data-scroll-direction="horizontal"] .c-scrollbar {
+    width: 100%;
+    height: 10px;
+    top: auto;
+    bottom: 0;
+    transform: scaleY(1);
+}
+
+[data-scroll-direction="horizontal"] .c-scrollbar:hover {
+      transform: scaleY(1.3);
+}
+
+.c-scrollbar_thumb {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: black;
+  opacity: 0.5;
+  width: 7px;
+  border-radius: 10px;
+  margin: 2px;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.has-scroll-dragging .c-scrollbar_thumb {
+    cursor: -webkit-grabbing;
+    cursor: grabbing;
+}
+
+[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
+    right: auto;
+    bottom: 0;
+}
+
